[tool.poetry]
name = "authome"
version = "1.0.1"
description = "HTTP service for single sign-on session tracking"
authors = ["ASI <asi@dbca.wa.gov.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.10"
Django = "3.2.20"
django-ipware = "7.0.1"
social-auth-app-django = "5.2.0"
social-auth-core = "4.4.2"
psycopg2 = "2.9.6"
gunicorn = "21.2.0"
dj-database-url = "1.0.0"
django-dotenv = "1.4.2"
django-extensions = "3.1.5"
dj-static = "0.0.6"
python-memcached = "1.59"
django-redis = "5.3.0"
qrcode = "7.4.2"
pyotp = "2.9.0"
Pillow = "9.5.0"
PyJWT = "2.8.0"
psutil = "5.9.0"

[tool.poetry.dev-dependencies]
ipython = "^7.31.1"
coverage = "^5.3"
coveralls = "^2.1.2"
mock = "^4.0.2"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
